--- a/template.yaml
+++ b/template.yaml
@@ -24,7 +24,6 @@ spec:
       dependencies:
         domain:
           oneOf:
-
             # -------------------
             # Banking
             # -------------------
@@ -45,6 +44,7 @@ spec:
                           title: UI Framework
                           type: string
                           enum: [Vue.js, Next.js, Typescript]
+                          ui:visibleIf: true  # Always visible once Frontend is selected
                         repoUrl:
                           title: Repo URL
                           type: string
@@ -52,7 +52,7 @@ spec:
                             - https://github.com/your-org/banking-vuejs-frontend
                             - https://github.com/your-org/banking-nextjs-frontend
                             - https://github.com/your-org/banking-typescript-frontend
-                          ui:visibleIf: frontend
+                          ui:visibleIf: frontend  # Repo URL is visible after selecting a frontend stack
                       required: [frontend]
 
                     # Banking / Backend
@@ -63,6 +63,7 @@ spec:
                           title: Backend Platform
                           type: string
                           enum: [Java, Python, Ruby]
+                          ui:visibleIf: true  # Always visible once Backend is selected
                         repoUrl:
                           title: Repo URL
                           type: string
@@ -70,7 +71,7 @@ spec:
                             - https://github.com/your-org/banking-java-backend
                             - https://github.com/your-org/banking-python-backend
                             - https://github.com/your-org/banking-ruby-backend
-                          ui:visibleIf: backend
+                          ui:visibleIf: backend  # Repo URL is visible after selecting a backend stack
                       required: [backend]
 
                     # Banking / Database
@@ -81,13 +82,14 @@ spec:
                           title: Database
                           type: string
                           enum: [MYSQL, PostgreSQL]
+                          ui:visibleIf: true  # Always visible once Database is selected
                         repoUrl:
                           title: Repo URL
                           type: string
                           enum:
                             - https://github.com/your-org/banking-mysql-schema
                             - https://github.com/your-org/banking-postgresql-schema
-                          ui:visibleIf: database
+                          ui:visibleIf: database  # Repo URL is visible after selecting a database stack
                       required: [database]
 
             # -------------------
@@ -110,12 +112,13 @@ spec:
                           title: UI Framework
                           type: string
                           enum: [React, Angular]
+                          ui:visibleIf: true
                         repoUrl:
                           title: Repo URL
                           type: string
                           enum:
-                            - https://github.com/kjchandan/simple-frontend-code
                             - https://github.com/your-org/insurance-angular-frontend
+                            - https://github.com/your-org/insurance-react-frontend
                           ui:visibleIf: frontend
                       required: [frontend]
 
@@ -127,6 +130,7 @@ spec:
                           title: Backend Platform
                           type: string
                           enum: [Scala, Go, Django]
+                          ui:visibleIf: true
                         repoUrl:
                           title: Repo URL
                           type: string
@@ -145,6 +149,7 @@ spec:
                           title: Database
                           type: string
                           enum: [MYSQL, PostgreSQL]
+                          ui:visibleIf: true
                         repoUrl:
                           title: Repo URL
                           type: string
@@ -174,6 +179,7 @@ spec:
                           title: UI Framework
                           type: string
                           enum: [Three.js, ReactJs, Angular 2+]
+                          ui:visibleIf: true
                         repoUrl:
                           title: Repo URL
                           type: string
@@ -192,6 +198,7 @@ spec:
                           title: Backend Platform
                           type: string
                           enum: [Springboot, ASP.NET]
+                          ui:visibleIf: true
                         repoUrl:
                           title: Repo URL
                           type: string
@@ -209,6 +216,7 @@ spec:
                           title: Database
                           type: string
                           enum: [MYSQL, PostgreSQL]
+                          ui:visibleIf: true
                         repoUrl:
                           title: Repo URL
                           type: string
@@ -238,6 +246,7 @@ spec:
                           title: UI Framework
                           type: string
                           enum: [Vue.js, Next.js, Typescript, Three.js, ReactJs, Angular 2+]
+                          ui:visibleIf: true
                         repoUrl:
                           title: Repo URL
                           type: string
@@ -259,6 +268,7 @@ spec:
                           title: Backend Platform
                           type: string
                           enum: [Java, Python, Ruby, PHP, Kotlin, Csharp, Perl, Scala, Go, Django, Springboot, ASP.NET]
+                          ui:visibleIf: true
                         repoUrl:
                           title: Repo URL
                           type: string
@@ -286,6 +296,7 @@ spec:
                           title: Database
                           type: string
                           enum: [MYSQL, PostgreSQL]
+                          ui:visibleIf: true
                         repoUrl:
                           title: Repo URL
                           type: string
